Fix table overflow to add internal scroll rather than on the outer div.

--- a/src/app/dashboard/deforestation/deforestation-options/deforestation-options.component.css
+++ b/src/app/dashboard/deforestation/deforestation-options/deforestation-options.component.css
@@ -710,6 +710,10 @@ th.dc-table-head {
     overflow-y: hidden;
 }
 
+#table-chart{
+    overflow-y: auto;
+}
+
 /* -------------------------------------------------------
     FOOTER
 ---------------------------------------------------------*/	
